# objectdetectionbyyolo

./: .gitignore  Dockerfile  README.md
rust/: Cargo.toml
rust/src/: lib.rs  yolo.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  Camera.tsx  types.ts  worker.ts
