[package]
name = "yolo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
anyhow = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Response", "WorkerGlobalScope"] }
