[package]
name = "yolo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
anyhow = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Response", "WorkerGlobalScope"] }
safetensors = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.8"
rand_distr = "0.4"
candle-core = "0.8.0"
candle-nn = "0.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }